fix contrast error on forecast icons when display:none

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -269,6 +269,7 @@ nav {
 .forecast-icons-box {
     background-color: var(--jet-black);
     border-color: var(--jet-black);
+    color: var(--almost-white)
 }
 
 .forecast-icons-box i {
